--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <script src="assets/include.js"></script>
-    <div data-include="partials/head.html"></div>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HM Waffle Menü</title>
+    <link rel="stylesheet" href="assets/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lazy+Dog&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="assets/include.js"></script>
 </head>
 <body>
     <div data-include="partials/header.html"></div>
@@ -11,7 +16,7 @@
         <section class="homepage-hero">
             <img src="assets/menu-images/hmwaffle.png" alt="HM Waffle" class="homepage-hero-img">
             <h2 class="homepage-title">Hoş Geldiniz!</h2>
-            <p class="homepage-desc">Taptaze waffle ve kahve çeşitlerimizle HM Waffle'a hoş geldiniz. Menüye hızlıca ulaşmak için üstteki menüyü kullanabilirsiniz.</p>
+            <p class="homepage-desc">Taptaze waffle ve kahve çeşitlerimizle HM Waffle'a hoş geldiniz. Menüye ulaşmak için masalarımızdaki QR kodu okutabilirsiniz.</p>
         </section>
 
         <!-- Öne Çıkan Ürünler Bölümü -->
