--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img src="assets/menu-images/cubuk-waffle.jpg" alt="Instagram Post 2">
                 </a>
             </div>
-            <a href="https://instagram.com/hmwaffle" target="_blank" class="instagram-follow-btn">Instagram'da Takip Et</a>
+            <a href="https://instagram.com/hmwaffle1" target="_blank" class="instagram-follow-btn">Instagram'da Takip Et</a>
         </section>
     </main>
     <div data-include="partials/footer.html"></div>
